<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FachLogic.MainActivity"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measure"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/height"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@drawable/relative_layout_bg">
        <TextView
            android:id="@+id/heightTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="italic"
            android:id="@+id/heightValue"
            android:textSize="16sp"
            android:textColor="#a4a5a6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:layout_below="@id/height"
        android:padding="12dp"
        android:background="@drawable/relative_layout_bg">
        <TextView
            android:id="@+id/weighttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="italic"
            android:id="@+id/weightValue"
            android:textSize="16sp"
            android:textColor="#a4a5a6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calorie"
        android:layout_below="@id/weight"
        android:padding="12dp"
        android:background="@drawable/relative_layout_bg">
        <TextView
            android:id="@+id/calorietxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="italic"
            android:id="@+id/calorieValue"
            android:textSize="16sp"
            android:textColor="#a4a5a6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bodyParts"
        android:layout_below="@id/calorie"
        android:padding="12dp"
        android:background="@drawable/relative_layout_bg">
        <TextView
            android:id="@+id/bodyPartsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_parts"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fat"
        android:layout_below="@id/bodyParts"
        android:padding="12dp"
        android:background="@drawable/relative_layout_bg">
        <TextView
            android:id="@+id/fattxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fat"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="0%"
            android:textStyle="italic"
            android:id="@+id/fatValue"
            android:textSize="16sp"
            android:textColor="#a4a5a6"/>
    </LinearLayout>
</LinearLayout>