<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:background="#1E1E1E">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/relative_layout_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/exerciseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_title"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:background="@drawable/relative_layout_bg"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moreButton"
                android:src="@drawable/baseline_more_horiz_24"
                android:background="@null" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/set"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/set"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/last"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/kg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/reps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reps"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text=" 1"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="-"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"/>
            </TableRow>

    </TableLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addSetButton"
        android:backgroundTint="#1F1F1F"
        android:text="@string/add_set"
        android:textColor="@color/white"/>

</LinearLayout>

</androidx.cardview.widget.CardView>
