<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:orientation="vertical"
    tools:context=".FachLogic.Activitys.MeasurementsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/measure"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/relative_layout_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/heightTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/heightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B0B0B0"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/relative_layout_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/weighttxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/weightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B0B0B0"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/calorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/relative_layout_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/calorietxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorie"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/calorieValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B0B0B0"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bodyParts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/relative_layout_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/bodyPartsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_parts"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/relative_layout_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/fattxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fatValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"
                    android:textColor="#B0B0B0"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
